--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div ng-repeat="headline in headlines">
-            <h1>{{headline}}</h1>
-        </div>
-        <script>
-            var header = document.querySelector('h1')
+<html>
+ <head>
+   <meta charset="utf-8">
+   <title> React Workshop</title>
+   <script src="node_modules/react/dist/react.js"></script>
+   <script src="node_modules/react-dom/dist/react-dom.js"></script>
+ </head>
+ <body>
 
-            header.innerHTML = "Goodbye";
-        </script>
-    </body>
+   <div id = "app"></div>
+     <script type ="text/javascript">
+
+     const myDiv = React.createElement("div", null,
+            	React.createElement("h1", null, "Hello World"),
+                React.createElement("h2", null, "Things to do in Hawaii:"),
+                React.createElement("ul", null, 
+                	React.createElement("li", null, "Eat Good food"),
+					React.createElement("li", null, "Lay on beach"),
+					React.createElement("li", null, "Drink fruity adult bevs"),
+					React.createElement("li", null, "Nom nom nom")
+                )
+            );
+            ReactDOM.render(myDiv, document.getElementById("app"));
+     </script>
+   
+ </body>
 </html>
