--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
    <title> React Workshop</title>
    <script src="node_modules/react/dist/react.js"></script>
    <script src="node_modules/react-dom/dist/react-dom.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
  </head>
  <body>
-
    <div id = "app"></div>
-     <script type ="text/javascript">
-
+     <script type ="text/babel">
         const tileDesriptions = [
             { color: 'blue', background: 'darkBlue'}, 
             { color: 'brown', background: 'pink'},
@@ -19,10 +18,12 @@
         ]
 
         const App = (props) => {
-            const tiles = props.tiles.map((tileObj) => {
-                return React.createElement(Tile, tileObj);
+            const tiles = props.tiles.map(({color, background}) => {
+                return (
+                    <Tile color={color} background={background}/>
+                )
             })
-            return React.createElement('div', null, tiles);
+            return <div>{tiles}</div>
         }
 
         const Tile = (props) => {
